@@ -6,8 +6,8 @@ package com.smartitengineering.smartpos.inventory.api.converter;
 
 import com.smartitengineering.dao.impl.hbase.spi.ExecutorService;
 import com.smartitengineering.dao.impl.hbase.spi.impl.AbstactObjectRowConverter;
-import com.smartitengineering.smartpos.admin.api.Address;
-import com.smartitengineering.smartpos.admin.api.GeoLocation;
+import com.smartitengineering.smartpos.inventory.api.Address;
+import com.smartitengineering.smartpos.inventory.api.GeoLocation;
 import com.smartitengineering.smartpos.inventory.api.PersistantStore;
 import com.smartitengineering.smartpos.inventory.api.domainid.StoreId;
 import java.util.NavigableMap;
@@ -59,6 +59,12 @@ public class StoreRowConverter extends AbstactObjectRowConverter<PersistantStore
     final NavigableMap<byte[], byte[]> self = allFamilies.get(FAMILY_SELF);
 
     if (self != null && !self.isEmpty()) {
+      try {
+        store.setId(getInfoProvider().getIdFromRowId(startRow.getRow()));
+      }
+      catch (Exception ex) {
+        logger.error("could not parse id");
+      }
       store.setName(Bytes.toString(self.get(CELL_NAME)));
     }
 
@@ -72,8 +78,21 @@ public class StoreRowConverter extends AbstactObjectRowConverter<PersistantStore
       address.setCountry(Bytes.toString(CELL_COUNTRY));
       address.setZip(Bytes.toString(CELL_ZIP));
 
-      geoLocation.setLatitude(Double.valueOf(Bytes.toString(CELL_LATITUDE)));
-      geoLocation.setLongitude(Double.valueOf(Bytes.toString(CELL_LONGITUDE)));
+      try {
+        geoLocation.setLatitude(Double.valueOf(Bytes.toString(CELL_LATITUDE)));
+      }
+      catch (Exception ex) {
+        geoLocation.setLatitude(new Double(0));
+        logger.info("exception in setting latitude, setting 0");
+      }
+
+      try {
+        geoLocation.setLongitude(Double.valueOf(Bytes.toString(CELL_LONGITUDE)));
+      }
+      catch (Exception ex) {
+        geoLocation.setLongitude(new Double(0));
+        logger.info("exception in setting longitude, setting 0");
+      }
 
       address.setGeoLocation(geoLocation);
       store.setAddress(address);
@@ -89,15 +108,42 @@ public class StoreRowConverter extends AbstactObjectRowConverter<PersistantStore
 
   @Override
   protected void getPutForTable(PersistantStore instance, ExecutorService service, Put put) {
+
     put.add(FAMILY_SELF, CELL_NAME, Bytes.toBytes(instance.getName()));
     if (instance.getAddress() != null) {
-      put.add(FAMILY_ADDRESS, CELL_STREEADDRESS, Bytes.toBytes(instance.getAddress().getStreetAddress()));
-      put.add(FAMILY_ADDRESS, CELL_CITY, Bytes.toBytes(instance.getAddress().getCity()));
-      put.add(FAMILY_ADDRESS, CELL_STATE, Bytes.toBytes(instance.getAddress().getState()));
-      put.add(FAMILY_ADDRESS, CELL_COUNTRY, Bytes.toBytes(instance.getAddress().getCountry()));
-      put.add(FAMILY_ADDRESS, CELL_ZIP, Bytes.toBytes(instance.getAddress().getZip()));
+      if (instance.getAddress().getStreetAddress() != null) {
+        put.add(FAMILY_ADDRESS, CELL_STREEADDRESS, Bytes.toBytes(instance.getAddress().getStreetAddress()));
+      }
+      else {
+        put.add(FAMILY_ADDRESS, CELL_STREEADDRESS, Bytes.toBytes(""));
+      }
+      if (instance.getAddress().getCity() != null) {
+        put.add(FAMILY_ADDRESS, CELL_CITY, Bytes.toBytes(instance.getAddress().getCity()));
+      }
+      else {
+        put.add(FAMILY_ADDRESS, CELL_CITY, Bytes.toBytes(""));
+      }
+      if (instance.getAddress().getState() != null) {
+        put.add(FAMILY_ADDRESS, CELL_STATE, Bytes.toBytes(instance.getAddress().getState()));
+      }
+      else {
+        put.add(FAMILY_ADDRESS, CELL_STATE, Bytes.toBytes(""));
+      }
+      if (instance.getAddress().getCountry() != null) {
+        put.add(FAMILY_ADDRESS, CELL_COUNTRY, Bytes.toBytes(instance.getAddress().getCountry()));
+      }
+      else {
+        put.add(FAMILY_ADDRESS, CELL_COUNTRY, Bytes.toBytes(""));
+      }
+      if (instance.getAddress().getZip() != null) {
+        put.add(FAMILY_ADDRESS, CELL_ZIP, Bytes.toBytes(instance.getAddress().getZip()));
+      }
+      else {
+        put.add(FAMILY_ADDRESS, CELL_ZIP, Bytes.toBytes(""));
+      }
     }
     if (instance.getAddress().getGeoLocation() != null) {
+      logger.info("inside geolocation");
       put.add(FAMILY_ADDRESS, CELL_LONGITUDE, Bytes.toBytes(instance.getAddress().getGeoLocation().getLongitude()));
       put.add(FAMILY_ADDRESS, CELL_LATITUDE, Bytes.toBytes(instance.getAddress().getGeoLocation().getLatitude()));
     }
